[package]
name = "bevy-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: Remember to revert this before releasing your game
bevy = { version = "0.10.0", features = ["dynamic_linking"] }